<resources>
    <string name="app_name">AutismApp</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">409070889544197</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb409070889544197</string>
    <string name="don_t_have_an_acount_sign_up">Don\'t have an acount? Sign up!</string>
    <string name="login">Login</string>
    <string name="gender">Gender</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="fill_in_my_child_s_info">Fill in my child\'s info</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="browse">Browse</string>
    <string name="my_child_s_photo">My child\'s photo</string>
    <string name="not_sure_click_here">Not sure? Click here!</string>
    <string name="create_account">Create account!</string>
    <string name="autism_spectrum_score">Autism Spectrum score</string>
    <string name="visit_a_website">Visit a website</string>
    <string name="visit_the_nearest_hospital_or_clinic">Visit the nearest hospital or clinic</string>
    <string name="choose_a_diagnosis_method">Choose a diagnosis method:</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty</string>
    <string name="password_length">The password should be 8 characters or longer</string>
    <string name="password_content">The password should contain at least a small letter, a capital letter, and a digit</string>
    <string name="password_not_match">This does not match the password</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="enter_the_code_that_has_been_sent_to_you">Enter the code that has been sent to you:</string>
    <string name="verify">Verify</string>
    <string name="registration_failed_invalid_phone_number">Registration failed: invlid phone number</string>
    <string name="registration_failed_quota_exceeded">Registration failed: quota exceeded</string>
    <string name="couldn_t_create_an_account">Couldn\'t create an account</string>
    <string name="creating_account">Creating account...</string>
    <string name="code_is_incorrect">Code is incorrect</string>
    <string name="choose_a_login_method">Choose a login method:</string>
    <string name="other_methods">Other methods</string>
    <string name="login_with_email_address">Login with Email address:</string>
    <string name="cancel">Cancel</string>
    <string name="logging_in">Logging in...</string>
    <string name="login_failed">Login failed</string>
    <string name="today_s_notes">Today\'s notes</string>
    <string name="edit">Edit</string>
    <string name="time">Time:</string>
    <string name="personal_info">Personal info</string>
    <string name="my_child_s_info">My child\'s info</string>
    <string name="notes">Notes</string>
    <string name="events">Events</string>
    <string name="important">Important</string>
    <string name="please_wait_a_moment">Please wait a moment...</string>
    <string name="event">Event:</string>
    <string name="date">Date:</string>
    <string name="event_description">Event description:</string>
    <string name="ringtone">Ringtone:</string>
    <string name="title_activity_artical_main">ArticalMainActivity</string>
    <string name="my_profile">My profile</string>
    <string name="my_child_s_profile">My child\'s profile</string>
    <string name="knowledge_base">Knowledge base</string>
    <string name="forum">Forum</string>
    <string name="contact">Contact</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign out</string>
    <string name="article_s_title">Article\'s title</string>
    <string name="content">Content:</string>
    <string name="publish_article">Publish article</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="uname">Username:</string>
    <string name="phone">Phone number:</string>
    <string name="email">Email address:</string>
    <string name="event_reminder">You have an event in 2 days at</string>
    <string name="functional_skills">Functional skills</string>
    <string name="sensory_skills">Sensory skills</string>
    <string name="academic_skills">Academic skills</string>
    <string name="behavior_skills">Behavior skills</string>
    <string name="child_name">My child\'s name:</string>
    <string name="child_age">My child\'s age:</string>
    <string name="child_gender">Gender:</string>
    <string name="spectrum_score">Autism spectrum score:</string>
    <string name="profile_of">Profile of</string>

</resources>
