<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_username"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_child_profile"
            android:icon="@drawable/ic_child"
            android:title="@string/my_child_s_profile" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_score"
            android:title="@string/knowledge_base" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_forum"
            android:title="@string/forum" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact" />
    </group>
</menu>