<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone_number"
        android:textSize="28sp"
        android:layout_margin="20dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewVerifyCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_code_that_has_been_sent_to_you"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_marginBottom="20dp"
        android:inputType="textShortMessage|number" />

    <Button
        android:id="@+id/buttonVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify" />
</LinearLayout>