<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    tools:context="worldontheotherside.wordpress.com.autismapp.Activities.NewArticleActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutTitle"
        android:layout_marginBottom="10dp"
        android:hint="@string/article_s_title">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextTitle"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border_color_primary_thick"
        android:ems="10"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewPicture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:src="@android:drawable/btn_star_big_on" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/add_a_picture"
                android:textSize="16sp" />

            <View
                android:id="@+id/viewHorizontalLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#8b8b8b" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonBrowse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/browse"
            android:onClick="browseAction"/>
    </LinearLayout>

    <Button
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/publish_article"
        android:onClick="publishAction"/>
</LinearLayout>
