<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/choose_a_diagnosis_method" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayoutWebDiagnose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewWebDiagnose"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/ic_web_diagnose" />

            <TextView
                android:id="@+id/textViewWebDiagnose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_a_website"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutVisitHospital"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewVisitHospital"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/ic_maps" />

            <TextView
                android:id="@+id/textViewVisitHospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_the_nearest_hospital_or_clinic"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>