<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:text="@string/choose_a_login_method"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_email" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOthers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewOthers"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_others" />

            <TextView
                android:id="@+id/textViewOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_methods"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>