<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="worldontheotherside.wordpress.com.autismapp.Activities.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewDp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/dp" />

        <ImageView
            android:id="@+id/imageViewEditDp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/imageViewDp"
            android:layout_alignStart="@+id/imageViewDp"
            android:tint="@color/colorAccent"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_edit"
            android:onClick="editDpAction"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewChildProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="editSaveAction"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email_green"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPhoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone_green"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="TextView"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_username_green"
            android:gravity="center"
            android:text="@string/uname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:inputType="textPersonName"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
